Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17418

Lustre crashed immediately after load with debug kernel

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.16.0
    • None
    • None
    • RHEL 8.5 debug kernel
    • 3
    • 9223372036854775807

      LU-9859 libcfs: refactor libcfs initialization. had removed libcfs debug init from libcfs module init itself.
      it caused a panic if debug settings will applied after module load.

      crash7> bt
      PID: 11558  TASK: ffff888113890000  CPU: 1   COMMAND: "lt-lctl"
       #0 [ffff88810ab5f848] __show_regs at ffffffff8186a0c5
       #1 [ffff88810ab5f8d0] general_protection at ffffffff83a0115e
          [exception RIP: cfs_trace_lock_tcd+37]
          RIP: ffffffffc1495a95  RSP: ffff88810ab5f988  RFLAGS: 00010296
          RAX: dffffc0000000000  RBX: 00000000000000c0  RCX: ffffffffc14d3580
          RDX: 0000000000000029  RSI: 0000000000000000  RDI: 000000000000014c
          RBP: ffff88810ab5fbb0   R8: 0000000000000001   R9: 00000000130e0580
          R10: ffff88810ab5fbc8  R11: ffffed102270b633  R12: 00000000000000c0
          R13: ffffffffc14902a0  R14: 0000000000000001  R15: 0000000000000000
          ORIG_RAX: ffffffffffffffff  CS: 0010  SS: 0018
       #2 [ffff88810ab5f998] libcfs_debug_msg at ffffffffc1496bec [libcfs]
       #3 [ffff88810ab5fbc0] cfs_str2mask at ffffffffc149e1b5 [libcfs]
       #4 [ffff88810ab5fc30] libcfs_debug_str2mask at ffffffffc149117b [libcfs]
       #5 [ffff88810ab5fd20] proc_dobitmasks at ffffffffc1492c90 [libcfs]
       #6 [ffff88810ab5fd70] lnet_debugfs_write at ffffffffc1491d44 [libcfs]
       #7 [ffff88810ab5fe00] full_proxy_write at ffffffff8242f903
       #8 [ffff88810ab5fe48] vfs_write at ffffffff8220ca57
       #9 [ffff88810ab5fe88] ksys_write at ffffffff8220d218
      #10 [ffff88810ab5ff28] do_syscall_64 at ffffffff81809865
      #11 [ffff88810ab5ff50] entry_SYSCALL_64_after_hwframe at ffffffff83a000b2
          RIP: 00007fed5c5e5915  RSP: 00007ffdaaa3f9c8  RFLAGS: 00000246
          RAX: ffffffffffffffda  RBX: 00007ffdaaa43422  RCX: 00007fed5c5e5915
          RDX: 000000000000001c  RSI: 00007ffdaaa43422  RDI: 0000000000000003
          RBP: 0000000000000003   R8: 0000000000000800   R9: 0000000000000003
          R10: 000000000000000b  R11: 0000000000000246  R12: 00007ffdaaa41bb8
          R13: 00000000017252a0  R14: 00000000017252e0  R15: 0000000000000000
          ORIG_RAX: 0000000000000001  CS: 0033  SS: 002b
      

      lets restore old behavior.

            simmonsja James A Simmons
            shadow Alexey Lyashkov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: